--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </main>
 
     <footer class="footer">
-      <p>Data from <a href="https://classes.cornell.edu" target="_blank" rel="noopener noreferrer">Cornell Class Roster</a>. Built by <a href="https://github.com/johnchun10" target="_blank" rel="noopener noreferrer">John Chun</a>.</p>
+      <p>Data from <a href="https://classes.cornell.edu" target="_blank" rel="noopener noreferrer">Cornell Class Roster</a>. Built with 🧠 by <a href="https://github.com/johnchun10" target="_blank" rel="noopener noreferrer">John Chun</a>.</p>
     </footer>
   </div>
 
